added gradient to footer

--- a/homeworks/vladyslav.kovalov_kovalov/8-css-variables/index.html
+++ b/homeworks/vladyslav.kovalov_kovalov/8-css-variables/index.html
@@ -71,7 +71,7 @@
                     </div>
                     <picture class="hero-section__image-container">
                         <source srcset="img/hero-image-x2.jpg 2x">
-                        <img class="hero-section__image" src="img/hero-image.jpg" alt="White sunny room">
+                        <img class="hero-section__image page-image" src="img/hero-image.jpg" alt="White sunny room">
                     </picture>
                 </div>
             </div>
@@ -84,19 +84,19 @@
                 <div class="gallery-section__row">
                     <picture class="gallery-section__image-container">
                         <source srcset="img/row-image-x2-1.jpg 2x">
-                        <img class="gallery-section__image" src="img/row-image-1.jpg" alt="White sunny room">
+                        <img class="gallery-section__image page-image" src="img/row-image-1.jpg" alt="White sunny room">
                     </picture>
                     <picture class="gallery-section__image-container">
                         <source srcset="img/row-image-x2-2.jpg 2x">
-                        <img class="gallery-section__image" src="img/row-image-2.jpg" alt="White sunny room">
+                        <img class="gallery-section__image page-image" src="img/row-image-2.jpg" alt="White sunny room">
                     </picture>
                     <picture class="gallery-section__image-container">
                         <source srcset="img/row-image-x2-3.jpg 2x">
-                        <img class="gallery-section__image" src="img/row-image-3.jpg" alt="White sunny room">
+                        <img class="gallery-section__image page-image" src="img/row-image-3.jpg" alt="White sunny room">
                     </picture>
                     <picture class="gallery-section__image-container">
                         <source srcset="img/row-image-x2-4.jpg 2x">
-                        <img class="gallery-section__image" src="img/row-image-4.jpg" alt="White sunny room">
+                        <img class="gallery-section__image page-image" src="img/row-image-4.jpg" alt="White sunny room">
                     </picture>
                 </div>
             </div>
@@ -109,7 +109,7 @@
                 <div class="features-section__content">
                     <picture class="features-section__image-container">
                         <source srcset="img/meeting-image-x2.jpg 2x">
-                        <img class="features-section__image" src="img/meeting-image.jpg" alt="People in meeting room">
+                        <img class="features-section__image page-image" src="img/meeting-image.jpg" alt="People in meeting room">
                     </picture>
                     <div class="features-section__details">
                         <ul class="features-section__list features-list">
@@ -145,64 +145,64 @@
                 </div>
             </div>
         </section>
-        <section class="consultation-section page-section">
-            <div class="consultation-section__container page-container">
-                <picture class="consultation-section__image-container">
+        <footer class="footer-section page-section">
+            <div class="footer-section__consultation-container page-container">
+                <picture class="footer-section__image-container">
                     <source srcset="img/consultation-image-x2.png 2x">
-                    <img class="consultation-section__image" src="img/consultation-image.png" alt="Big white building">
+                    <img class="consultation-section__image page-image" src="img/consultation-image.png" alt="Big white building">
                 </picture>
-                <div class="consultation-section__hero-container">
-                    <h3 class="consultation-section__title title">
+                <div class="footer-section__hero-container">
+                    <h3 class="footer-section__title title">
                         Realize your dream project with <span class="title--accented">
                             Archmove
                         </span>
                     </h3>
-                    <button class="button button--accented consultation-section__button" type="button">
+                    <button class="button button--accented footer-section__button" type="button">
                         FREE CONSULTATION
                     </button>
                 </div>
             </div>
-        </section>
-        <footer class="footer-section page-section">
-            <div class="footer-section__container page-container">
-                <nav class="footer-section__navigation navigation">
-                    <a href="#"
-                        class="
+            <div class="footer-section__footer">
+                <div class="footer-section__container page-container">
+                    <nav class="footer-section__navigation navigation">
+                        <a href="#"
+                            class="
                     navigation__logo
                     navigation__link
                     logo
                     footer-section__logo
                     ">
-                        <svg class="logo__icon">
-                            <use xlink:href="icons/icons-sprite.svg#logo"></use>
-                        </svg>
-                    </a>
-                    <ul class="navigation__list">
-                        <li class="navigation__list-item navigation__list-item--first">
-                            <a href="#" class="
-                            navigation__link
-                            navigation__link--first
-                            ">
-                                Design Gallery
-                            </a>
-                        </li>
-                        <li class="navigation__list-item">
-                            <a href="#" class="navigation__link">
-                                List of Architect
-                            </a>
-                        </li>
-                        <li class="navigation__list-item">
-                            <a href="#" class="navigation__link">
-                                Articles
-                            </a>
-                        </li>
-                        <li class="navigation__list-item">
-                            <a href="#" class="navigation__link">
-                                How it Works
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
+                            <svg class="logo__icon">
+                                <use xlink:href="icons/icons-sprite.svg#logo"></use>
+                            </svg>
+                        </a>
+                        <ul class="navigation__list">
+                            <li class="navigation__list-item navigation__list-item--first">
+                                <a href="#" class="
+                    navigation__link
+                    navigation__link--first
+                    ">
+                                    Design Gallery
+                                </a>
+                            </li>
+                            <li class="navigation__list-item">
+                                <a href="#" class="navigation__link">
+                                    List of Architect
+                                </a>
+                            </li>
+                            <li class="navigation__list-item">
+                                <a href="#" class="navigation__link">
+                                    Articles
+                                </a>
+                            </li>
+                            <li class="navigation__list-item">
+                                <a href="#" class="navigation__link">
+                                    How it Works
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
         </footer>
     </body>
