added icons to features section

--- a/homeworks/vladyslav.kovalov_kovalov/8-css-variables/index.html
+++ b/homeworks/vladyslav.kovalov_kovalov/8-css-variables/index.html
@@ -113,7 +113,7 @@
                     </picture>
                     <div class="features-section__details">
                         <ul class="features-section__list features-list">
-                            <li class="features-section__list-item feature-item">
+                            <li class="features-section__list-item feature-item feature-item--1">
                                 <h4 class="feature-item__title">
                                     100% guaranteed project completion
                                 </h4>
@@ -121,7 +121,7 @@
                                     Build safe, comfortable and transparent with a project management application with a joint account.
                                 </p>
                             </li>
-                            <li class="features-section__list-item feature-item">
+                            <li class="features-section__list-item feature-item feature-item--2">
                                 <h4 class="feature-item__title">
                                     No additional fees
                                 </h4>
@@ -129,7 +129,7 @@
                                     There are no hidden costs. The value of the offer you get is the value you paid.
                                 </p>
                             </li>
-                            <li class="features-section__list-item feature-item">
+                            <li class="features-section__list-item feature-item feature-item--3">
                                 <h4 class="feature-item__title">
                                     Get escort from the Team
                                 </h4>
