header is ready, main - 90%

--- a/homeworks/oleksandr.prylutskiy_SanSandru4/8-css-variables/index.html
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/8-css-variables/index.html
@@ -35,8 +35,84 @@
                 <button class="header__btn" type="button">Sign Up</button>
             </div>
         </header>
-        <main class="main"></main>
+        <main class="main">
+            <div class="main__dream-house">
+                <h1 class="main__dream-house_name">
+                    Build Your Dream <span class="color__word">House</span>
+                </h1>
+                <div class="main__dream-house_info">
+                    <p class="dream-house__text">
+                        The first and most trusted marketplace of design & build house in The World. 100% guaranteed Build safe, comfortable and transparent with a project management for the best result
+                    </p>
+                    <button class="dream-house__btn" type="button">Free Consultation</button>
+                </div>
+                <div class="main__dream-house_picture">
+                    <img class="dream-house__img" src="img/Rectangle 1.jpg" alt="dream house">
+                </div>
+            </div>
+            <div class="main__build-room">
+                <h3 class="main__build-room_name">Build professional valuable room for you</h3>
+                <div class="main__build-room_picture">
+                    <img class="build-room__img" src="img/img-01.jpg" alt="room 1">
+                    <img class="build-room__img" src="img/img-02.jpg" alt="room 2">
+                    <img class="build-room__img" src="img/img-03.jpg" alt="room 3">
+                    <img class="build-room__img" src="img/img-04.jpg" alt="room 4">
+                </div>
+            </div>
+            <div class="main__archmove">
+                <h3 class="main__archmove_name">Build your needs with Archmove</h3>
+                <div class="main__archmove_info">
+                    <div class="main__archmove_picture">
+                        <img src="img/img-5.jpg" alt="archmove">
+                    </div>
+                    <div class="main__archmove_consultation">
+                        <ul class="consultation__list">
+                            <li class="consultation__list_info">
+                                <div class="list__img">
+                                    <svg class="guaranteed">
+                                        <use xlink:href="#guaranteed"></use>
+                                    </svg>
+                                </div>
+                                <div class="list_text">
+                                    <p class="list_name">100% guaranteed project completion</p>
+                                    <p class="list_paragraph">Build safe, comfortable and transparent with a project management application with a joint account.</p>
+                                </div>
+                            </li>
+                            <li class="consultation__list_info">
+                                <div class="list__img">
+                                    <svg class="fees">
+                                        <use xlink:href="#fees"></use>
+                                    </svg>
+                                </div>
+                                <div class="list_text">
+                                    <p class="list_name">No additional fees</p>
+                                    <p class="list_paragraph">There are no hidden costs. The value of the offer you get is the value you paid.</p>
+                                </div>
+                            </li>
+                            <li class="consultation__list_info">
+                                <div class="list__img">
+                                    <svg class="escort">
+                                        <use xlink:href="#escort"></use>
+                                    </svg>
+                                </div>
+                                <div class="list_text">
+                                    <p class="list_name">Get escort from the Team</p>
+                                    <p class="list_paragraph">Monitor reports from the Arsitag team who check directly in the field.</p>
+                                </div>
+                            </li>
+                        </ul>
+                        <button class="free-consultation__btn" type="button">FREE CONSULTATION</button>
+                    </div>
+                </div>
+            </div>
+            <div class="main__realize-dream">
+                <div class="main__realize-dream_img">
+                    <img src="img/img.png" alt="house in the sky">
+                </div>
+            </div>
+        </main>
         <footer class="footer"></footer>
+
         <svg display="none" xmlns="http://www.w3.org/2000/svg">
             <symbol id="logo" viewBox="0 0 62 28">
                 <g>
@@ -66,6 +142,24 @@
                     <path d="M3.21973 4.28041L4.28041 3.21973L5.78041 4.71973L4.71973 5.78041L3.21973 4.28041Z"></path>
                     <path d="M3.2196 19.7197L4.7196 18.2197L5.78029 19.2803L4.28029 20.7803L3.2196 19.7197Z"></path>
                     <path d="M18.2197 4.71973L19.7197 3.21973L20.7804 4.28041L19.2804 5.78041L18.2197 4.71973Z"></path>
+                </g>
+            </symbol>
+            <symbol id="fees" viewBox="0 0 39 48">
+                <g>
+                    <path d="M2 2H37V46H2V2Z" stroke="black" stroke-width="4"></path>
+                    <path d="M23.2542 38V36.7661C26.3077 36.5017 28 34.9153 28 32.3301C28 30.1267 26.7676 28.7656 24.3487 28.2661L23.2542 28.0507V25.0052C24.0452 25.1423 24.6246 25.818 24.6522 26.5916H27.7425C27.7149 24.2609 25.9858 22.6158 23.2542 22.3416V21H21.9298V22.3318C18.959 22.5668 17.2483 24.1532 17.2483 26.6895C17.2483 28.8341 18.4808 30.2442 20.8353 30.7926L21.9298 31.0472V34.2005C20.9457 34.0927 20.2375 33.4171 20.1915 32.5553H17C17.0092 35.0622 18.8211 36.6192 21.9298 36.7857V38H23.2542ZM24.8545 32.7316C24.8545 33.5639 24.2567 34.1221 23.2542 34.2005V31.2823C24.3303 31.4977 24.8545 31.9775 24.8545 32.7316ZM20.4766 26.3566C20.4766 25.6025 21.0744 25.0444 21.9298 24.9856V27.7667C20.9824 27.5611 20.4766 27.0714 20.4766 26.3566Z" fill="#FD665E"></path>
+                </g>
+            </symbol>
+            <symbol id="escort" viewBox="0 0 40 53">
+                <g>
+                    <path d="M2 51V17.9097L19.5324 2.62508L38 17.9397V51H2Z" stroke="black" stroke-width="4"></path>
+                    <circle cx="20" cy="24" r="5" stroke="#FD665E" stroke-width="4"></circle>
+                </g>
+            </symbol>
+            <symbol id="guaranteed" viewBox="0 0 48 56">
+                <g>
+                    <path d="M22.6273 51.9247C10.8481 43.511 3.35716 30.3774 2.0857 15.9972L23.6239 2.35639L45.8748 15.994C44.1284 30.4277 36.3962 43.4887 24.5344 51.9614L23.6066 52.6242L22.6273 51.9247Z" stroke="black" stroke-width="4"></path>
+                    <path d="M17.5 24.8995L22.508 29.9075L32.4075 20.008" stroke="#FD665E" stroke-width="4"></path>
                 </g>
             </symbol>
         </svg>
