added theme toggler icon changing

--- a/homeworks/vladyslav.kovalov_kovalov/8-css-variables/index.html
+++ b/homeworks/vladyslav.kovalov_kovalov/8-css-variables/index.html
@@ -45,7 +45,7 @@
                 <div class="account-actions">
                     <button data-theme-toggler class="button button--theme-toggler" type="button">
                         <svg class="accounts-actions__theme-toggler-icon">
-                            <use xlink:href="icons/icons-sprite.svg#theme-toggler"></use>
+                            <use data-theme-toggler-icon xlink:href="icons/icons-sprite.svg#theme-toggler-dark"></use>
                         </svg>
                     </button>
                     <button class="button button--empty account-actions__button" type="button">Sign In</button>
