--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
@@ -9,6 +9,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Roboto&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Roboto:wght@400;900&display=swap" rel="stylesheet">
     </head>
     <body>
         <header class="header">
@@ -35,8 +38,32 @@
                 <use xlink:href="sprite.svg#halfmoon"></use>
             </svg>
             <button type="button" class="header__buttons__sign--in">Sign In</button>
-            <button type="button" class="header__buttons__sign--up">Sign Up</button>
+            <button type="button" class="header__buttons__sign--up">
+                <b>Sign Up</b>
+            </button>
         </header>
+        <div class="dreamhouse__title-container">
+            <h1 class="dreamhouse__title-container__title">
+                Build Your Dream <span class="dreamhouse__title-container__title--house">House</span>
+            </h1>
+        </div>
+        <div class="dreamhouse">
+            <div class="dreamhouse__aside">
+                <div class="dreamhouse__aside__text">
+                    <p>The first and most trusted marketplace</p>
+                    <p>of design & build house in the World.</p>
+                    <p>100% guaranted Build safe,</p>
+                    <p>comfortable and transparate with a</p>
+                    <p>project management for the best result</p>
+                </div>
+                <button type="button" class="dreamhouse__aside__button">
+                    <b>Free Consultation</b>
+                </button>
+            </div>
+            <div class="dreamhouse__photo">
+                <img src="1x/computers_1x.png" alt="">
+            </div>
+        </div>
         <script defer src="script_variables.js"></script>
     </body>
 </html>
