added block with icons

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
@@ -61,7 +61,82 @@
                 </button>
             </div>
             <div class="dreamhouse__photo">
-                <img src="1x/computers_1x.png" alt="">
+                <picture>
+                    <source srcset="2x/computers_2x.png 2x">
+                    <img src="1x/computers_1x.png" alt="computers">
+                </picture>
+            </div>
+        </div>
+        <h2 class="design__title">Build professional</h2>
+        <h2 class="design__title">valuable room for you</h2>
+        <div class="design">
+            <picture>
+                <source srcset="2x/kitchen_2x.png 2x">
+                <img src="1x/kitchen_1x.png" alt="kitchen">
+            </picture>
+            <picture>
+                <source srcset="2x/gasstove_2x.png 2x">
+                <img src="1x/gasstove_1x.png" alt="gasstove">
+            </picture>
+            <picture>
+                <source srcset="2x/bedroom_2x.png 2x">
+                <img src="1x/bedroom_1x.png" alt="bedroom">
+            </picture>
+            <picture>
+                <source srcset="2x/diningroom_2x.png 2x">
+                <img src="1x/diningroom_1x.png" alt="diningroom">
+            </picture>
+        </div>
+        <h2 class="archmove__title">Build your needs</h2>
+        <h2 class="archmove__title">with Archmove</h2>
+        <div class="archmove">
+            <div>
+                <picture>
+                    <source srcset="2x/meeting_2x.png 2x">
+                    <img src="1x/meeting_1x.png" alt="meeting">
+                </picture>
+            </div>
+            <div class="archmove__content">
+                <div class="archmove__content__part--bird">
+                    <svg width="48" height="56" class="archmove__icon--bird">
+                        <use xlink:href="sprite.svg#bird"></use>
+                    </svg>
+                    <div class="archmove__content__part--text">
+                        <h4>
+                            <b>100% guaranted project completion</b>
+                        </h4>
+                        <p>Build safe, comfortable and transparent</p>
+                        <p>with a project management applacation</p>
+                        <p>with a joint account</p>
+                    </div>
+                </div>
+                <div class="archmove__content__part">
+                    <svg width="39" height="48" class="archmove__icon">
+                        <use xlink:href="sprite.svg#dollar"></use>
+                    </svg>
+                    <div class="archmove__content__part--text">
+                        <h4>
+                            <b>No additional fees</b>
+                        </h4>
+                        <p>There are no hidden costs. The value of</p>
+                        <p>the offer you get is the value you paid</p>
+                    </div>
+                </div>
+                <div class="archmove__content__part">
+                    <svg width="40" height="53" class="archmove__icon">
+                        <use xlink:href="sprite.svg#circle"></use>
+                    </svg>
+                    <div class="archmove__content__part--text">
+                        <h4>
+                            <b>Get escort from the Team</b>
+                        </h4>
+                        <p>Monitor reports from Arsitag team</p>
+                        <p>who check directly in the field</p>
+                    </div>
+                </div>
+                <button type="button" class="archmove__content__button">
+                    <b>FREE CONSULTATION</b>
+                </button>
             </div>
         </div>
         <script defer src="script_variables.js"></script>
