--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
@@ -21,16 +21,16 @@
             <div class="header__menu">
                 <ul class="header__menu__list">
                     <li class="header__menu__lines">
-                        <a class="header__menu__links" href="#">Design Gallery</a>
+                        <a class="menu__links" href="#">Design Gallery</a>
                     </li>
                     <li class="header__menu__lines">
-                        <a class="header__menu__links" href="#">List of Architect</a>
+                        <a class="menu__links" href="#">List of Architect</a>
                     </li>
                     <li class="header__menu__lines">
-                        <a class="header__menu__links" href="#">Articles</a>
+                        <a class="menu__links" href="#">Articles</a>
                     </li>
                     <li class="header__menu__lines">
-                        <a class="header__menu__links" href="#">How it Works</a>
+                        <a class="menu__links" href="#">How it Works</a>
                     </li>
                 </ul>
             </div>
@@ -44,7 +44,7 @@
         </header>
         <div class="dreamhouse__title-container">
             <h1 class="dreamhouse__title-container__title">
-                Build Your Dream <span class="dreamhouse__title-container__title--house">House</span>
+                Build Your Dream <span class="word--color">House</span>
             </h1>
         </div>
         <div class="dreamhouse">
@@ -139,6 +139,60 @@
                 </button>
             </div>
         </div>
+        <div class="dream-project">
+            <div class="dream-project--photo">
+                <picture>
+                    <source srcset="2x/house_2x.png 2x">
+                    <img src="1x/house_1x.png" alt="diningroom">
+                </picture>
+            </div>
+            <div class="dream-project__content">
+                <div class="dream-project__content__text">
+                    <p>
+                        <b>Realize your dream</b>
+                    </p>
+                    <p>
+                        <b>project with
+                            <span class="word--color">Archmove</span>
+                        </b>
+                    </p>
+                </div>
+                <button type="button" class="dream-project__content__button">
+                    <b>FREE CONSULTATION</b>
+                </button>
+            </div>
+        </div>
+        <footer class="footer">
+            <div class="footer__menu">
+                <ul class="footer__menu__list">
+                    <li class="footer__menu__lines">
+                        <a href="#" class="menu__links">
+                            <b>About Us</b>
+                        </a>
+                    </li>
+                    <li class="footer__menu__lines">
+                        <a href="#" class="menu__links">
+                            <b>How it Works</b>
+                        </a>
+                    </li>
+                    <li class="footer__menu__lines">
+                        <a href="#" class="menu__links">
+                            <b>FAQ</b>
+                        </a>
+                    </li>
+                    <li class="footer__menu__lines">
+                        <a href="#" class="menu__links">
+                            <b>Contact Us</b>
+                        </a>
+                    </li>
+                    <li class="footer__menu__lines">
+                        <a href="#" class="menu__links">
+                            <b>Privacy Policy</b>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </footer>
         <script defer src="script_variables.js"></script>
     </body>
 </html>
