added footer logo

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
@@ -192,6 +192,9 @@
                     </li>
                 </ul>
             </div>
+            <svg class="footer__logo">
+                <use xlink:href="sprite.svg#logo"></use>
+            </svg>
         </footer>
         <script defer src="script_variables.js"></script>
     </body>
