--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/8-css-variables/index.html
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/8-css-variables/index.html
@@ -14,7 +14,141 @@
     </head>
     <body>
         <div class="wrapper">
-
+            <header class="header">
+                <a class="header__logo" href="#">
+                    <img src="./images/logo-arch.png" alt="logo">
+                </a>
+                <nav class="header__nav nav-menu">
+                    <ul class="nav-menu__list list">
+                        <li class="list__item">
+                            <a class="list__link" href="#">Design Gallery </a>
+                        </li>
+                        <li class="list__item">
+                            <a class="list__link" href="#">List of Architect </a>
+                        </li>
+                        <li class="list__item">
+                            <a class="list__link" href="#">Articles </a>
+                        </li>
+                        <li class="list__item">
+                            <a class="list__link" href="#">How it Works </a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="header__control-buttons">
+                    <button class="button header__theme-switcher" data-switch-btn type="button">
+                        <img src="images/ic_sharp-mode-night.png" alt="switcher theme">
+                    </button>
+                    <button class="button header__btn-sing-in" type="button">Sign In</button>
+                    <button class="button header__btn-sing-up" type="button">Sign Up</button>
+                </div>
+            </header>
+            <main class="main-content">
+                <section class="section section-hero">
+                    <h1 class="section-hero__banner">
+                        Build Your Dream <span class="banner-focus">House</span>
+                    </h1>
+                    <div class="section-hero__teaser">
+                        <div class="section-hero__teaser-column">
+                            <p class="section-hero__text-description">
+                                The first and most trusted marketplace of design & build house in The World. 100% guaranteed
+                                Build safe, comfortable and transparent with a project management for the best result
+                            </p>
+                            <button class="button call-to-action-btn" type="button">Free Consultation</button>
+                        </div>
+                        <img class="section-hero__teaser-picture" src="images/features.jpg"
+                            alt="Hose Interior">
+                    </div>
+                </section>
+                <section class="section section-examples">
+                    <h2 class="section-title section-examples__title">
+                        Build professional<br> valuable room for you
+                    </h2>
+                    <div class="section-examples__gallery gallery">
+                        <img class="gallery__image" src="images/gall-1.jpg" alt="Examples photo">
+                        <img class="gallery__image" src="images/gall-2.jpg" alt="Examples photo">
+                        <img class="gallery__image" src="images/gall-3.jpg" alt="Examples photo">
+                        <img class="gallery__image" src="images/gall-4.jpg" alt="Examples photo">
+                    </div>
+                </section>
+                <section class="section section-advantage">
+                    <h2 class="section-title section-advantage__title">
+                        Build your needs<br> with Archmove
+                    </h2>
+                    <div class="section-advantage__content">
+                        <div class="section-advantage__image">
+                            <img class="benefits__img" src="images/advantage.jpg"
+                                alt="Advantages photo">
+                        </div>
+                        <ul class="section-advantage__advantages-list advantages-list">
+                            <li class="advantages-list__item">
+                                <img class="advantages-list__item-icon" src="images/Group-7.png" width="48" height="56"
+                                    alt="advantage icon">
+                                <div class="advantages-list__item-description">
+                                    <h3 class="advantages-list__item-title">100% guaranteed project completion</h3>
+                                    <p class="advantages-list__item-text">Build safe, comfortable and transparent with a project
+                                        management application with a joint account.</p>
+                                </div>
+                            </li>
+                            <li class="advantages-list__item">
+                                <img class="advantages-list__item-icon" src="images/Group-2.png" width="48" height="56"
+                                    alt="advantage icon">
+                                <div class="advantages-list__item-description">
+                                    <h3 class="advantages-list__item-title">No additional fees</h3>
+                                    <p class="advantages-list__item-text">There are no hidden costs. The value of the offer you
+                                        get is the value you paid.</p>
+                                </div>
+                            </li>
+                            <li class="advantages-list__item">
+                                <img class="advantages-list__item-icon" src="images/Group-3.png" width="48" height="56"
+                                    alt="advantage icon">
+                                <div class="advantages-list__item-description">
+                                    <h3 class="advantages-list__item-title">Get escort from the Team</h3>
+                                    <p class="advantages-list__item-text">Monitor reports from the Arsitag team who check
+                                        directly in the field.</p>
+                                </div>
+                            </li>
+                        </ul>
+                        <button
+                            class="button call-to-action-btn call-to-action-btn--advantages" type="button">FREE CONSULTATION</button>
+                    </div>
+                </section>
+                <section class="section section-resume">
+                    <div class="section-resume__image-container">
+                        <img class="section-resume__image" src="./images/house.png" alt="Photo build your needs with Archmove">
+                    </div>
+                    <div class="section-resume__text">
+                        <h2 class="section-title section-resume__title">
+                            Realize your dream project with <span class="banner-focus">Archmove</span>
+                        </h2>
+                        <button class="button call-to-action-btn call-to-action-btn--resume" type="button">FREE CONSULTATION
+                        </button>
+                    </div>
+                </section>
+            </main>
+            <footer class="footer">
+                <nav class="footer__nav nav-menu">
+                    <ul class="nav-menu__list list">
+                        <li class="list__item">
+                            <a class="list__link" href="#"> About Us</a>
+                        </li>
+                        <li class="list__item">
+                            <a class="list__link" href="#"> How it Works</a>
+                        </li>
+                        <li class="list__item">
+                            <a class="list__link" href="#"> FAQ</a>
+                        </li>
+                        <li class="list__item">
+                            <a class="list__link" href="#"> Contact Us</a>
+                        </li>
+                        <li class="list__item">
+                            <a class="list__link" href="#"> Privacy Policy</a>
+                        </li>
+                    </ul>
+                </nav>
+                <a class="footer__logo" href="#">
+                    <img src="./images/logo-arch.png" alt="logo" width="62" height="28">
+                </a>
+            </footer>
         </div>
         <script defer src="./js/main.js"></script>
     </body>
