--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/8-css-variables/index.html
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/8-css-variables/index.html
@@ -10,7 +10,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="style-day.css">
+        <link rel="stylesheet" href="style-day.css" data-style-src>
+        <link rel="stylesheet" href="main-style.css">
     </head>
     <body>
         <div class="wrapper">
@@ -35,8 +36,8 @@
                     </ul>
                 </nav>
                 <div class="header__control-buttons">
-                    <button class="button header__theme-switcher" data-switch-btn type="button">
-                        <img src="images/ic_sharp-mode-night.png" alt="switcher theme">
+                    <button class="button header__theme-switcher" type="button">
+                        <img src="images/ic_sharp-mode-night.png" data-switch-btn alt="switcher theme">
                     </button>
                     <button class="button header__btn-sing-in" type="button">Sign In</button>
                     <button class="button header__btn-sing-up" type="button">Sign Up</button>
